# nmd-lite

./: .gitmodules
cmake-experiment/: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake-experiment/include/: main.hpp
cmake-experiment/src/: main.cpp
lex-experiment/: .gitignore  run_lex.bat  template.l  tex_command.l
nmd-grammar/: .gitignore  CMakeLists.txt  README.md
nmd-grammar/include/nmd-grammar/: grammar.hpp  grammar_aux.hpp  grammar_core.hpp
nmd-lex/: CMakeLists.txt  README.md
nmd-lex/include/nmd-lex/: lex.hpp  lex_aux.hpp  lex_core.hpp  lex_interface.hpp  string_source.hpp
